--- a/style.css
+++ b/style.css
@@ -38,6 +38,7 @@ span {
   body {
     font-family: 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Fira Sans',
       'Droid Sans', 'Helvetica Neue', Helvetica, Arial, sans-serif;
+    text-align: center;
   }
   
   .timer input {
